pkginclude_HEADERS = atomic.h \
	adc.h\
    avl-cmp.h\
    avl.h\
	baro.h\
    can.h\
    chip.h\
    console.h\
	display.h\
    driver.h\
    eeprom.h\
    encoder.h\
	dx_tracker.h\
    gpio.h\
	i2c.h\
	imu.h\
    io.h\
    irq.h\
    leds.h\
    list.h\
    math.h\
    motor.h\
    mutex.h\
	pointer.h\
    pwm.h\
    queue.h\
    rtc.h\
    sem.h\
    serial.h\
    spi.h\
    spinlock.h\
    thread.h\
    timestamp.h\
    types.h\
    ulink.h\
    vardir.h\
	usb.h\
	usb_cdc.h\
    work.h
