nobase_pkginclude_HEADERS = \
	dts/stm32f10x.dtsi\
	dts/stm32f10x.h\
	dts/stm32f10x_gpio.h\
	dts/stm32f4xx.dtsi\
	dts/stm32f4xx.h\
	dts/stm32f4xx_gpio.h\
	dts/stm32f4xx_tim.h\
	atomic.h \
	adc.h\
    avl-cmp.h\
    avl.h\
	baro.h\
    can.h\
    chip.h\
    console.h\
	display.h\
    driver.h\
    eeprom.h\
    encoder.h\
	dx_tracker.h\
    gpio.h\
	i2c.h\
	imu.h\
    io.h\
    irq.h\
    leds.h\
    list.h\
    math.h\
    motor.h\
    mutex.h\
	pointer.h\
    pwm.h\
    queue.h\
    rtc.h\
    sem.h\
    serial.h\
    spi.h\
    spinlock.h\
    thread.h\
    timestamp.h\
    types.h\
    ulink.h\
    vardir.h\
	usb.h\
	usb_cdc.h\
    work.h
